# cpp_template

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.py.tmpl  config.py  configure_templates.py  confirm.py  meson.build  meson.build.tmpl  muon_fmt.ini  mymeson  template_config.ini
include/cpp_template/: .gitignore  version.hpp.in  version.hpp.in.tmpl
src/: main.cpp  main.cpp.tmpl  version.cpp.in  version.cpp.tmpl
template_files/: .clang-format  .clang-tidy  .gitignore.tmpl  LICENSE.tmpl  README.md.tmpl  build.py  clean-app.py.tmpl  clean-lib.py.tmpl  clean.py  clean.py.tmpl  clear_cache.py  conanfile-app.py.tmpl  conanfile-lib.py.tmpl  conanfile.py.tmpl  install.py  meson.build.tmpl  profile.py  profiles.py  this_venv.py  update_deps.py
template_files/build_scripts/: copy.py
template_files/include/: version.hpp.in.tmpl
template_files/profiles/: default.profile  default.profile.tmpl
template_files/scripts/: build.py  clean.py.tmpl  clear_cache.py  this_venv.py
template_files/src/: main.cpp.tmpl  version.cpp.tmpl  version.test.cpp.tmpl
template_files/test_package/: conanfile.py.tmpl  meson.build
template_files/test_package/src/: main.cpp.tmpl
test_package/: conanfile.py  conanfile.py.tmpl  meson.build
test_package/src/: main.cpp  main.cpp.tmpl
tests/: test.py
tests/application/: template_config.ini
tests/application_argparse/: main.cpp  template_config.ini  test.py
tests/application_invalid_config/: template_config.ini
tests/application_no_version_header/: template_config.ini  test.py
tests/application_no_version_header_conanless/: template_config.ini
tests/application_sdl/: main.cpp  template_config.ini  test.py
tests/library_glfw/: binary_config.json  dependency_config.json  main.cpp  test.py  window.cpp
tests/library_header_only/: binary_config.json  template_config.ini  test.py
tests/library_no_binaries/: template_config.ini
tests/library_no_version_header/: template_config.ini  test.py
tests/library_no_version_header_conanless/: template_config.ini
tests/test_application/: template_config.ini  test.py
tests/test_application_argparse/: template_config.ini
tests/test_application_conanless/: template_config.ini  test.py
tests/test_application_invalid_config/: template_config.ini  test.py
tests/test_default/: test.py
tests/test_library/: template_config.ini
tests/test_library_conanless/: template_config.ini
tests/test_library_glfw/: binary_config.json  template_config.ini  window.hpp
